# CmakeTestDemo

./: README.md
case1/: CMakeLists.txt  case1.cc
case2/: CMakeLists.txt
case3_1_withSourceFile/: CMakeLists.txt  case.cc
case3_1_withSourceFile/math/: CMakeLists.txt
case3_2_withStaticLib/: CMakeLists.txt
case3_2_withStaticLib/lib/math/: CMakeLists.txt
case3_2_withStaticLib/src/: case.cc
case4/: CMakeLists.txt
case4/inc/: config.h.in
case4/lib/math/: CMakeLists.txt  mathFunc.h
case4/src/: CMakeLists.txt  case.cc
case5/: CMakeLists.txt
case5/lib/math/: CMakeLists.txt
case6/: CMakeLists.txt
case6/inc/: config.h.in
case6/lib/math/: mathFunc.cc
case6/src/: case.cc
